--- a/src/index.css
+++ b/src/index.css
@@ -171,6 +171,7 @@ nav ul li {
 
 nav ul li a {
     background-color: #424242;
+    background-image: linear-gradient(to bottom, #424242, #303030);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
     border-color: #4c4c4c #000000 #000000 #474747;
@@ -190,6 +191,7 @@ nav ul li a {
 
 nav ul li a:hover {
     background-color: #3c70df;
+    background-image: linear-gradient(to bottom, #3c70df, #235cd4);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
     border-color: #4e7de2 #102a63 #102a63 #4576e0;
@@ -198,6 +200,7 @@ nav ul li a:hover {
 
 nav ul li a:active {
     background-color: #1448b3;
+    background-image: linear-gradient(to bottom, #1448b3, #103b93);
     box-shadow: 0 0 0 rgba(0, 0, 0, 0.6);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
@@ -308,6 +311,7 @@ td {
 
 th {
     background-color: #c01614;
+    background-image: linear-gradient(to bottom, #c01614, #a01211);
     color: #f7e279;
     text-shadow: 1px 1px 3px #111111;
     font-weight: 700;
@@ -394,6 +398,7 @@ th {
 
 .smallbuttonstyle {
     background-color: #424242;
+    background-image: linear-gradient(to bottom, #424242, #303030);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
     border-color: #4c4c4c #000000 #000000 #474747;
@@ -411,6 +416,7 @@ th {
 
 .smallbuttonstyle:hover {
     background-color: #3c70df;
+    background-image: linear-gradient(to bottom, #3c70df, #235cd4);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
     border-color: #4e7de2 #102a63 #102a63 #4576e0;
@@ -419,6 +425,7 @@ th {
 
 .smallbuttonstyle:active {
     background-color: #1448b3;
+    background-image: linear-gradient(to bottom, #1448b3, #103b93);
     box-shadow: 0 0 0 rgba(0, 0, 0, 0.6);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
@@ -428,6 +435,7 @@ th {
 
 .smallbutton {
     background-color: #424242;
+    background-image: linear-gradient(to bottom, #424242, #303030);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
     border-color: #4c4c4c #000000 #000000 #474747;
@@ -450,6 +458,7 @@ th {
 
 .smallbutton:hover {
     background-color: #3c70df;
+    background-image: linear-gradient(to bottom, #3c70df, #235cd4);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
     border-color: #4e7de2 #102a63 #102a63 #4576e0;
@@ -458,6 +467,7 @@ th {
 
 .smallbutton:active {
     background-color: #1448b3;
+    background-image: linear-gradient(to bottom, #1448b3, #103b93);
     box-shadow: 0 0 0 rgba(0, 0, 0, 0.6);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
@@ -492,6 +502,7 @@ th {
 
 #bingoPage .newcard {
     background-color: #424242;
+    background-image: linear-gradient(to bottom, #424242, #303030);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
     border-color: #4c4c4c #000000 #000000 #474747;
@@ -512,6 +523,7 @@ th {
 
 #bingoPage .newcard:hover {
     background-color: #3c70df;
+    background-image: linear-gradient(to bottom, #3c70df, #235cd4);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
     border-color: #4e7de2 #102a63 #102a63 #4576e0;
@@ -520,6 +532,7 @@ th {
 
 #bingoPage .newcard:active {
     background-color: #1448b3;
+    background-image: linear-gradient(to bottom, #1448b3, #103b93);
     box-shadow: 0 0 0 rgba(0, 0, 0, 0.6);
     border-width: 1px 0px 1px 1px;
     border-style: solid;
