--- a/src/index.css
+++ b/src/index.css
@@ -496,7 +496,7 @@ th {
     justify-content: flex-end;
 }
 
-#bingoPage #results #seed {
+#bingoPage #results .infoBlock {
     margin-left: 14px;
 }
 
