--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,3 @@
-.gold {
-    color: #f7e279;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.6), 0 0 1px #8d8145;
-}
-
-.silver {
-    color: #bec7d2;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.6), 0 0 1px #6d7278;
-}
-
-.bronze {
-    color: #e09456;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.6), 0 0 1px #805531;
-}
-
-.red {
-    color: #fa5050;
-}
-
-.green {
-    color: #52d64f;
-}
-
-.grey {
-    color: #808080;
-}
-
-.small {
-    font-size: 75%;
-}
-
 html,
 body {
     background: #111111;
@@ -47,10 +16,6 @@ body {
     overflow-y: scroll;
 }
 
-.always_scrollbar {
-    overflow-y: scroll;
-}
-
 .container {
     width: 976px;
     margin: 0 auto;
@@ -58,48 +23,6 @@ body {
     overflow: auto;
 }
 
-.container2 {
-    width: 100%;
-    min-width: 992px;
-    margin: 0 auto;
-    overflow: hidden;
-    padding-bottom: 16px;
-}
-
-header {
-    background: url("//c15111086.r86.cf2.rackcdn.com/texture_bar2.jpg") top center;
-    border-bottom: 1px #424242 dotted;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-    padding-top: 8px;
-}
-
-footer {
-    background: url("assets/texture_bar_footer2.jpg") top center;
-    border-top: 1px #424242 dotted;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-    color: #808080;
-    font-size: 85%;
-    line-height: 85%;
-    text-align: center;
-    width: 100%;
-    position: relative;
-    margin-top: -29px;
-    /* negative height minus border */
-    height: 28px;
-    clear: both;
-}
-
-footer .left {
-    margin-left: 8px;
-}
-
-footer .right {
-    margin-right: 8px;
-}
-
-footer .container {
-    padding: 8px 0;
-}
 
 #wrap {
     min-height: 100%;
@@ -109,103 +32,11 @@ main {
     padding-bottom: 28px;
 }
 
-#logo {
-    background: url("//c15111086.r86.cf2.rackcdn.com/srl_350px.png") no-repeat;
-    display: block;
-    overflow: hidden;
-    width: 350px;
-    height: 50px;
-    margin-bottom: 13px;
-    float: left;
-}
-
-#logo span {
-    display: none;
-}
-
-#headerright {
-    display: block;
-    overflow: hidden;
-    height: 50px;
-    margin-bottom: 13px;
-    width: 594px;
-    margin-right: 16px;
-    float: right;
-    text-align: center;
-    font-family: 'Roboto', Helvetica, Arial, sans-serif;
-    font-weight: 800;
-    font-size: 1.21em;
-    line-height: 18px;
-    color: #70e36e;
-}
-
-#headerright span {
-    color: #5d97ff;
-}
-
-#headerright a {
-    display: block;
-    padding-top: 10px;
-}
-
-#headerright a:hover {
-    color: #b4ffae;
-}
-
-#headerright a:hover span {
-    color: #78e0ff;
-}
-
 nav ul {
     margin: 0;
     padding: 0;
     text-indent: 0;
     clear: both;
-}
-
-nav ul li {
-    list-style-type: none;
-    margin: 0 0 16px 0;
-    padding: 0;
-}
-
-nav ul li a {
-    background-color: #424242;
-    background-image: linear-gradient(to bottom, #424242, #303030);
-    border-width: 1px 0 1px 1px;
-    border-style: solid;
-    border-color: #4c4c4c #000000 #000000 #474747;
-    text-align: center;
-    display: block;
-    font-weight: 700;
-    color: #bec7d2;
-    float: left;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-    border-radius: 5px;
-    user-select: none;
-    cursor: pointer;
-    width: 105px;
-    padding: 4px 0;
-    margin: 0 16px 0 0;
-}
-
-nav ul li a:hover {
-    background-color: #3c70df;
-    background-image: linear-gradient(to bottom, #3c70df, #235cd4);
-    border-width: 1px 0 1px 1px;
-    border-style: solid;
-    border-color: #4e7de2 #102a63 #102a63 #4576e0;
-    color: #ffffff;
-}
-
-nav ul li a:active {
-    background-color: #1448b3;
-    background-image: linear-gradient(to bottom, #1448b3, #103b93);
-    box-shadow: 0 0 0 rgba(0, 0, 0, 0.6);
-    border-width: 1px 0 1px 1px;
-    border-style: solid;
-    border-color: #164fc5 #071a40 #071a40 #154cbc;
-    color: #ffffff;
 }
 
 ::selection {
@@ -253,13 +84,6 @@ h2 {
     overflow: hidden;
 }
 
-h4 {
-    display: block;
-    margin: 8px 0;
-    color: #f7e279;
-    font-weight: 700;
-}
-
 a {
     color: inherit;
     text-decoration: none;
@@ -293,10 +117,6 @@ li {
     padding-bottom: 11.2px;
 }
 
-.noselect {
-    user-select: none;
-}
-
 table {
     width: 100%;
     border-spacing: 0;
@@ -317,166 +137,9 @@ th {
     font-weight: 700;
 }
 
-#skypedetectionswf {
-    position: absolute;
-    overflow: hidden;
-    top: -999px;
-}
-
 .note {
     color: #808080;
     font-size: 85%;
-}
-
-.rounded_top {
-    border-radius: 5px 5px 0 0;
-}
-
-.rounded_bottom {
-    border-radius: 0 0 5px 5px;
-}
-
-.rounded_topleft {
-    border-radius: 5px 0 0 0;
-}
-
-.rounded_topright {
-    border-radius: 0 5px 0 0;
-}
-
-.rounded_bottomleft {
-    border-radius: 0 0 0 5px;
-}
-
-.rounded_bottomright {
-    border-radius: 0 0 5px 0;
-}
-
-.textshadow {
-    text-shadow: 1px 1px 3px #111111;
-}
-
-.boxshadow {
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-}
-
-.insetboxshadow {
-    box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.6);
-}
-
-.insetboxshadow2 {
-    box-shadow: inset 0 0 50px rgba(255, 255, 255, 0.3);
-}
-
-.noboxshadow {
-    box-shadow: 0 0 0 rgba(0, 0, 0, 0.6);
-}
-
-.liteboxshadow {
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.45);
-}
-
-.italic {
-    font-style: italic;
-}
-
-.bold {
-    font-weight: 700;
-}
-
-.left {
-    float: left;
-}
-
-.right {
-    float: right;
-}
-
-.center {
-    text-align: center;
-}
-
-.smallbuttonstyle {
-    background-color: #424242;
-    background-image: linear-gradient(to bottom, #424242, #303030);
-    border-width: 1px 0 1px 1px;
-    border-style: solid;
-    border-color: #4c4c4c #000000 #000000 #474747;
-    text-align: center;
-    display: block;
-    font-weight: 700;
-    color: #bec7d2;
-    margin: 0;
-    float: left;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-    border-radius: 5px;
-    user-select: none;
-    cursor: pointer;
-}
-
-.smallbuttonstyle:hover {
-    background-color: #3c70df;
-    background-image: linear-gradient(to bottom, #3c70df, #235cd4);
-    border-width: 1px 0 1px 1px;
-    border-style: solid;
-    border-color: #4e7de2 #102a63 #102a63 #4576e0;
-    color: #ffffff;
-}
-
-.smallbuttonstyle:active {
-    background-color: #1448b3;
-    background-image: linear-gradient(to bottom, #1448b3, #103b93);
-    box-shadow: 0 0 0 rgba(0, 0, 0, 0.6);
-    border-width: 1px 0 1px 1px;
-    border-style: solid;
-    border-color: #164fc5 #071a40 #071a40 #154cbc;
-    color: #ffffff;
-}
-
-.smallbutton {
-    background-color: #424242;
-    background-image: linear-gradient(to bottom, #424242, #303030);
-    border-width: 1px 0 1px 1px;
-    border-style: solid;
-    border-color: #4c4c4c #000000 #000000 #474747;
-    text-align: center;
-    display: block;
-    font-weight: 700;
-    color: #bec7d2;
-    margin: 0;
-    float: left;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-    border-radius: 5px;
-    user-select: none;
-    cursor: pointer;
-    width: 105px;
-    margin-right: 16px;
-    margin-bottom: 8px;
-    padding: 4px 0;
-    text-decoration: none;
-}
-
-.smallbutton:hover {
-    background-color: #3c70df;
-    background-image: linear-gradient(to bottom, #3c70df, #235cd4);
-    border-width: 1px 0 1px 1px;
-    border-style: solid;
-    border-color: #4e7de2 #102a63 #102a63 #4576e0;
-    color: #ffffff;
-}
-
-.smallbutton:active {
-    background-color: #1448b3;
-    background-image: linear-gradient(to bottom, #1448b3, #103b93);
-    box-shadow: 0 0 0 rgba(0, 0, 0, 0.6);
-    border-width: 1px 0 1px 1px;
-    border-style: solid;
-    border-color: #164fc5 #071a40 #071a40 #154cbc;
-    color: #ffffff;
-}
-
-#buttonholder {
-    width: 100%;
 }
 
 #bingoPage #results {
@@ -484,10 +147,6 @@ th {
     width: 594px;
     margin-right: 16px;
     text-align: right;
-}
-
-#bingoPage #results .flag {
-    margin-left: 8px;
 }
 
 #bingoPage #results #cardInfo {
@@ -510,14 +169,13 @@ th {
     display: block;
     font-weight: 700;
     color: #bec7d2;
-    margin: 0;
     float: left;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     border-radius: 5px;
     user-select: none;
     cursor: pointer;
     width: 110px;
-    margin-right: 10px;
+    margin: 0 10px 0 0;
     padding: 4px 0;
 }
 
@@ -554,14 +212,13 @@ th {
     display: block;
     font-weight: 700;
     color: #bec7d2;
-    margin: 1px;
     float: left;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     border-radius: 5px;
     user-select: none;
     cursor: pointer;
     width: 40px;
-    margin-right: 10px;
+    margin: 1px 10px 1px 1px;
     padding: 4px 0;
 }
 
@@ -597,19 +254,6 @@ th {
 #bingoPage #bingo {
     margin-top: 16px;
     user-select: none;
-}
-
-#bingoPage #bingo .rowcol {
-    background: #000811;
-    font-size: 75%;
-    color: #3c70df;
-    font-weight: 700;
-    border: 1px #0a245a solid;
-}
-
-#bingoPage #bingo .rowcol:hover {
-    color: #ffffff;
-    background: #1448b3;
 }
 
 #bingoPage #bingo tr:first-child td,
@@ -655,28 +299,12 @@ th {
     background: #1448b3;
 }
 
-#bingoPage #bingo tr td:hover,
-#bingoPage #bingo tr td.hover {
-    background: #001a36;
-    color: #fff;
-}
-
 #bingoPage #bingo tr td.greensquare {
     background: #005511;
 }
 
-#bingoPage #bingo tr td.greensquare:hover,
-#bingoPage #bingo tr td.greensquare.hover {
-    background: #007722;
-}
-
 #bingoPage #bingo tr td.redsquare {
     background: #550011;
-}
-
-#bingoPage #bingo tr td.redsquare:hover,
-#bingoPage #bingo tr td.redsquare.hover {
-    background: #770022;
 }
 
 #bingoPage #about_bingo {
